# Group-Discussion-Environment

./: .gitignore  Dockerfile  README.md  grader.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  grader.py  models.py  tasks.py
data/easy/: gd_easy_001.json  gd_easy_002.json  gd_easy_003.json
data/hard/: gd_hard_001.json  gd_hard_002.json  gd_hard_003.json
data/medium/: gd_medium_001.json  gd_medium_002.json  gd_medium_003.json
server/: app.py
tests/: python inference.py  test_env.py
