[project]
name = "gd-multieval"
version = "0.1.0"
description = "Multimodal group discussion evaluation environment for AI agents"
authors = [
    { name = "Keerthika" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flask",
    "gunicorn",
    "pydantic",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"