[project]
name = "gd-multieval"
version = "0.1.0"
description = "Multimodal group discussion evaluation environment for AI agents"
authors = [
    { name = "Keerthika" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flask==3.1.0",
    "gunicorn==25.0.0",
    "pydantic==2.12.5",
    "openai==2.30.0",
    "openenv-core>=0.2.0"
]

# 🔥 REQUIRED for multi-mode deployment
[project.scripts]
server = "server.app:app"

# 🔧 Build system (mandatory)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"